# tex-jp-build

./: .gitattributes  CMakeLists.txt
.github/workflows/: build-macos.yml  build-mingw.yml  build-msvc.yml  build-ubuntu.yml  build-with-cmake-msvc.yml
source/: CMakeLists.txt
source/libs/: CMakeLists.txt
source/texk/: .gitattributes  CMakeLists.txt
source/texk/bibtex-x/: CMakeLists.txt  bibtex-1.c  bibtex-2.c  bibtex-3.c  bibtex-4.c  bibtex-x_test.ps1  bibtex.c  gblvars.h  sysdep.h  utils.c
source/texk/bibtex-x/cmake/: config.h.in
source/texk/bibtex-x/tests/: bibtex8-char.test  bibtex8-char0.test  bibtex8-name.test  bibtex8-sort.test  bibtex8.test  bibtex8u-mem.test  bibtexu-basic.test  bibtexu-char.test  bibtexu-char0.test  bibtexu-iscjk.test  bibtexu-name.test  bibtexu-range.test  bibtexu-sort.test  bibtexu-sort0.test  bibtexu-sort1.test  bibtexu-yannis.test  bibtexu.test  iscjku.bbl  testiscjku.bib
source/texk/dvi2tty/: CMakeLists.txt  disdvi.test  dvi2tty.test  dvi2tty_test.ps1
source/texk/dvi2tty/cmake/: c-auto.h.in
source/texk/dvi2tty/dvi2tty-src/: dvi2tty.c  dvi2tty.h
source/texk/dvidvi/: CMakeLists.txt  dvidvi.test  dvidvi_test.ps1
source/texk/dvidvi/cmake/: config.h.in
source/texk/dviout-util/: CMakeLists.txt  chkdvifont.c  chkdvifont.test  dd.h  dviout-util_test.ps1  dvispc.c  dvispc.test
source/texk/dviout-util/cmake/: config.h.in
source/texk/dvipdfm-x/: CMakeLists.txt  dvipdfm-x_test.ps1  dvipdfmx-upjf.test  xdvipdfm-ann.test  xdvipdfm-bad.test  xdvipdfm-bb.test  xdvipdfm-bkm.test  xdvipdfm-psz.test  xdvipdfm-ptx.test  xdvipdfm-res.test  xdvipdfm-rev.test  xdvipdfm-ttc.test  xdvipdfmx.test
source/texk/dvipsk/: CMakeLists.txt  beginfontk1.test  dvips.c  dvips_test.ps1  eepic-nan.test  pfbincl.test  same-name.test  test-afm2tfm.test  test-dvips.test  test-dvips00.test  test-missing-image.test  test-overflow-buffers.test  uptex-vf.ps1  uptex-vf.test
source/texk/dvipsk/cmake/: c-auto.h.in
source/texk/kpathsea/: CMakeLists.txt
source/texk/kpathsea/tests/: cnfline.test  cnfnewline.test  cnfnull.test  cnfprog.test  kpseaccess.test  kpsereadlink.test  kpsestat.test  kpsewhich.test  kpsewhich_test.ps1
source/texk/kpathsea/tests/windows/: texmf.cnf
source/texk/kpathsea/win32/: CMakeLists.txt
source/texk/makejvf/: makejvf.test  makejvf_test.ps1  uniblock.c
source/texk/mendexk/: CMakeLists.txt  mendex_test.ps1
source/texk/mendexk/cmake/: c-auto.h.in
source/texk/mendexk/tests/: mendex.test
source/texk/ptexenc/: CMakeLists.txt
source/texk/seetexk/: CMakeLists.txt  dvibook.c  dviconcat.c  seetex_test.ps1  seetexk.test
source/texk/seetexk/cmake/: config.h.in
source/texk/upmendex/: CMakeLists.txt  ChangeLog  convert.c  fwrite.c  kana.h  main.c  sort.c  upmendex_test.ps1  version.h
source/texk/upmendex/cmake/: c-auto.h.in
source/texk/upmendex/tests/: upmendex.test
source/texk/web2c/: CMakeLists.txt  texmfmp.h  tftopl.test  vftovp.test
source/texk/web2c/cmake/: bootstrap.cmake  cweb.cmake  eptex.cmake  euptex.cmake  makecpool.py  ptex.cmake  uptex.cmake  web2c-sh.py
source/texk/web2c/cwebdir/: ctang-w2c.ch  ctwill-w2c.ch  ctwill.test  cweav-w2c.ch
source/texk/web2c/eptexdir/: eptex_test.ps1  pdfutils.ch
source/texk/web2c/euptexdir/: euptex_test.ps1
source/texk/web2c/lib/: CMakeLists.txt  texmfmp.c
source/texk/web2c/ptexdir/: ptex_test.ps1  wcfname.test
source/texk/web2c/uptexdir/: ChangeLog  kanji.c  uptex-m.ch  uptex_test.ps1  upver.test  wcfname.test
source/texk/web2c/web2c/: CMakeLists.txt
uptex-package/: 00readme_uptex.txt  01uptex_doc_utf8.txt  02uptex_changelog_utf8.txt
uptex-package/Master/texmf-dist/tex/uptex/uptex-base/: ukinsoku.tex
uptex-package/samples/: Makefile  adobe-cns-utf8.tex  adobe-gb-utf8.tex  adobe-jp-utf8.tex  adobe-kr-utf8.tex  cjk_babel.tex  greek-uplatex.tex
